# remote_object

./: Cargo.toml
remote_object_derive/: Cargo.toml
remote_object_derive/src/: lib.rs
src/: lib.rs
tests/: test1.rs  test_derive_enum.rs  utils.rs
