[package]
name = "remote_object"
version = "0.1.0"
edition = "2021"

[[test]]
name = "test1"
path = "tests/test1.rs"
[[test]]
name = "test_derive_enum"
path = "tests/test_derive_enum.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remote_object_derive = {path="./remote_object_derive"}